[project]
name = "density-deconvolution"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "homerjed", email = "jedhmr@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "equinox>=0.13.0",
    "jax>=0.6.2",
    "matplotlib>=3.10.3",
    "optax>=0.2.5",
    "transformer-flows>=0.0.11",
]

[project.scripts]
density-deconvolution = "density_deconvolution:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
